--- a/package.json
+++ b/package.json
@@ -1,55 +1,36 @@
 {
-  "name": "typescript-react-redux-boilerplate",
-  "version": "1.0.0",
+  "name": "claim-survey",
+  "version": "0.0.1",
   "private": true,
-  "description": "A frontend boilerplate with React, Redux and Typescript",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "webpack -p --progress --colors"
+  "engines": {
+    "node": ">=0.10.0"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/classnames": "2.2.3",
-    "@types/history": "4.6.2",
-    "@types/node": "8.0.53",
-    "@types/react": "^16.0.25",
-    "@types/react-dom": "16.0.3",
-    "@types/react-redux": "5.0.13",
-    "@types/react-router": "4.0.18",
-    "@types/redux-actions": "2.2.2",
-    "@types/webpack": "3.8.1",
-    "@types/webpack-env": "1.13.2",
-    "awesome-typescript-loader": "^3.4.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "postcss": "^6.0.14",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.2.1",
-    "react-hot-loader": "^3.1.3",
-    "redux-devtools-extension": "^2.13.2",
-    "style-loader": "^0.19.0",
-    "typescript": "^2.6.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "office-ui-fabric-react": "^5.30.2"
+  "scripts": {
+    "build": "gulp bundle",
+    "clean": "gulp clean",
+    "test": "gulp test"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1"
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "@types/react": "15.0.38",
+    "@types/react-dom": "0.14.18",
+    "@types/react-addons-shallow-compare": "0.14.17",
+    "@types/react-addons-update": "0.14.14",
+    "@types/react-addons-test-utils": "0.14.15",
+    "@microsoft/sp-core-library": "~1.3.4",
+    "@microsoft/sp-webpart-base": "~1.3.4",
+    "@microsoft/sp-lodash-subset": "~1.3.4",
+    "@microsoft/sp-office-ui-fabric-core": "~1.3.4",
+    "@types/webpack-env": ">=1.12.1 <1.14.0"
+  },
+  "devDependencies": {
+    "@microsoft/sp-build-web": "~1.3.4",
+    "@microsoft/sp-module-interfaces": "~1.3.4",
+    "@microsoft/sp-webpart-workbench": "~1.3.4",
+    "gulp": "~3.9.1",
+    "@types/chai": ">=3.4.34 <3.6.0",
+    "@types/mocha": ">=2.2.33 <2.6.0",
+    "ajv": "~5.2.2"
   }
 }
